--- a/Fashion1/Fashion/Controller/ShowPhoto/View/Activity/ActivityDetailCommentsLittleCell.xib
+++ b/Fashion1/Fashion/Controller/ShowPhoto/View/Activity/ActivityDetailCommentsLittleCell.xib
@@ -13,6 +13,48 @@
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ua8-rP-AqR">
+                        <rect key="frame" x="10" y="10" width="35" height="35"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="35" id="ZNe-yU-cfu"/>
+                            <constraint firstAttribute="height" constant="35" id="aZE-JR-WT8"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="名字" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wiO-0Y-1Lm">
+                        <rect key="frame" x="53" y="10" width="38" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="9yw-mP-GSb"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fko-RY-VW3">
+                        <rect key="frame" x="82" y="12" width="18" height="18"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="18" id="6Oc-E7-in3"/>
+                            <constraint firstAttribute="width" constant="18" id="fgg-X5-Byt"/>
+                        </constraints>
+                    </imageView>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="S9o-4j-ZEF">
+                        <rect key="frame" x="108" y="11.5" width="35" height="18"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="35" id="vwU-kH-aCu"/>
+                        </constraints>
+                    </imageView>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="S9o-4j-ZEF" firstAttribute="height" secondItem="fko-RY-VW3" secondAttribute="height" id="FD4-E7-hCG"/>
+                    <constraint firstItem="wiO-0Y-1Lm" firstAttribute="leading" secondItem="ua8-rP-AqR" secondAttribute="trailing" constant="8" id="Fv1-vZ-Xc7"/>
+                    <constraint firstItem="wiO-0Y-1Lm" firstAttribute="centerY" secondItem="fko-RY-VW3" secondAttribute="centerY" constant="-0.5" id="P8J-3f-h5m"/>
+                    <constraint firstItem="fko-RY-VW3" firstAttribute="leading" secondItem="wiO-0Y-1Lm" secondAttribute="trailing" constant="5" id="Ps3-Nr-cu6"/>
+                    <constraint firstItem="wiO-0Y-1Lm" firstAttribute="top" secondItem="ua8-rP-AqR" secondAttribute="top" id="Ulk-lc-MlZ"/>
+                    <constraint firstItem="S9o-4j-ZEF" firstAttribute="leading" secondItem="fko-RY-VW3" secondAttribute="trailing" constant="8" id="WSr-rh-7gA"/>
+                    <constraint firstItem="ua8-rP-AqR" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="XMh-eZ-B21"/>
+                    <constraint firstItem="S9o-4j-ZEF" firstAttribute="centerY" secondItem="fko-RY-VW3" secondAttribute="centerY" constant="-0.5" id="ejI-Cn-MmV"/>
+                    <constraint firstItem="ua8-rP-AqR" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="sVa-WB-1As"/>
+                </constraints>
             </tableViewCellContentView>
             <point key="canvasLocation" x="419" y="383.5"/>
         </tableViewCell>
