--- a/Fashion1/Fashion/Controller/ShowPhoto/View/Activity/ActivityDetailCommentsLittleCell.xib
+++ b/Fashion1/Fashion/Controller/ShowPhoto/View/Activity/ActivityDetailCommentsLittleCell.xib
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8121.17" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8101.14"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="79" id="KGk-i7-Jjw" customClass="ActivityDetailCommentsLittleCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="79"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="69.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ua8-rP-AqR">
@@ -21,9 +21,10 @@
                             <constraint firstAttribute="height" constant="35" id="aZE-JR-WT8"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="名字" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wiO-0Y-1Lm">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="名字" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wiO-0Y-1Lm">
                         <rect key="frame" x="53" y="10" width="38" height="21"/>
                         <constraints>
+                            <constraint firstAttribute="width" constant="38" id="8jj-tR-JCS"/>
                             <constraint firstAttribute="height" constant="21" id="9yw-mP-GSb"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
@@ -31,31 +32,65 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fko-RY-VW3">
-                        <rect key="frame" x="82" y="12" width="18" height="18"/>
+                        <rect key="frame" x="96" y="12" width="18" height="18"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="18" id="6Oc-E7-in3"/>
                             <constraint firstAttribute="width" constant="18" id="fgg-X5-Byt"/>
                         </constraints>
                     </imageView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="S9o-4j-ZEF">
-                        <rect key="frame" x="108" y="11.5" width="35" height="18"/>
+                        <rect key="frame" x="122" y="12" width="35" height="18"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="35" id="vwU-kH-aCu"/>
                         </constraints>
                     </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3 hours" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K4w-L3-uIE">
+                        <rect key="frame" x="266" y="10" width="46" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="XhE-D4-1q8"/>
+                            <constraint firstAttribute="width" constant="46" id="xT7-60-NMU"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="70z-YB-HKS">
+                        <rect key="frame" x="243" y="11" width="18" height="18"/>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="这个地方看起来不错" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eRP-FJ-Cws">
+                        <rect key="frame" x="53" y="36" width="259" height="25.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="70z-YB-HKS" firstAttribute="height" secondItem="fko-RY-VW3" secondAttribute="height" id="3w3-Vj-gg9"/>
+                    <constraint firstItem="K4w-L3-uIE" firstAttribute="leading" secondItem="70z-YB-HKS" secondAttribute="trailing" constant="5" id="66d-Bp-j3b"/>
+                    <constraint firstItem="eRP-FJ-Cws" firstAttribute="trailing" secondItem="K4w-L3-uIE" secondAttribute="trailing" id="7KO-i3-o9t"/>
                     <constraint firstItem="S9o-4j-ZEF" firstAttribute="height" secondItem="fko-RY-VW3" secondAttribute="height" id="FD4-E7-hCG"/>
                     <constraint firstItem="wiO-0Y-1Lm" firstAttribute="leading" secondItem="ua8-rP-AqR" secondAttribute="trailing" constant="8" id="Fv1-vZ-Xc7"/>
                     <constraint firstItem="wiO-0Y-1Lm" firstAttribute="centerY" secondItem="fko-RY-VW3" secondAttribute="centerY" constant="-0.5" id="P8J-3f-h5m"/>
                     <constraint firstItem="fko-RY-VW3" firstAttribute="leading" secondItem="wiO-0Y-1Lm" secondAttribute="trailing" constant="5" id="Ps3-Nr-cu6"/>
+                    <constraint firstItem="70z-YB-HKS" firstAttribute="centerY" secondItem="fko-RY-VW3" secondAttribute="centerY" constant="-0.5" id="TqX-mf-cA7"/>
+                    <constraint firstItem="eRP-FJ-Cws" firstAttribute="top" secondItem="K4w-L3-uIE" secondAttribute="bottom" constant="5" id="UBP-7q-vnm"/>
                     <constraint firstItem="wiO-0Y-1Lm" firstAttribute="top" secondItem="ua8-rP-AqR" secondAttribute="top" id="Ulk-lc-MlZ"/>
                     <constraint firstItem="S9o-4j-ZEF" firstAttribute="leading" secondItem="fko-RY-VW3" secondAttribute="trailing" constant="8" id="WSr-rh-7gA"/>
                     <constraint firstItem="ua8-rP-AqR" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="XMh-eZ-B21"/>
+                    <constraint firstAttribute="trailing" secondItem="K4w-L3-uIE" secondAttribute="trailing" constant="8" id="eUR-sC-LAn"/>
                     <constraint firstItem="S9o-4j-ZEF" firstAttribute="centerY" secondItem="fko-RY-VW3" secondAttribute="centerY" constant="-0.5" id="ejI-Cn-MmV"/>
+                    <constraint firstAttribute="bottom" secondItem="eRP-FJ-Cws" secondAttribute="bottom" constant="8" id="p9N-7O-zh5"/>
+                    <constraint firstItem="70z-YB-HKS" firstAttribute="centerY" secondItem="K4w-L3-uIE" secondAttribute="centerY" id="rMa-mK-FIB"/>
                     <constraint firstItem="ua8-rP-AqR" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="sVa-WB-1As"/>
+                    <constraint firstItem="eRP-FJ-Cws" firstAttribute="leading" secondItem="wiO-0Y-1Lm" secondAttribute="leading" id="xFi-pO-hIV"/>
+                    <constraint firstItem="70z-YB-HKS" firstAttribute="width" secondItem="fko-RY-VW3" secondAttribute="width" id="ztO-df-ofB"/>
                 </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="commentLabel" destination="eRP-FJ-Cws" id="4YS-bN-La0"/>
+                <outlet property="nameLabel" destination="wiO-0Y-1Lm" id="7KO-Mp-UYU"/>
+                <outlet property="nameLabelWidthConstraint" destination="8jj-tR-JCS" id="E4w-oL-LQO"/>
+            </connections>
             <point key="canvasLocation" x="419" y="383.5"/>
         </tableViewCell>
     </objects>
